implement page header

--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
   <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-  
+  <header class="pageHeader">
+    <div class="container">
+      <div class="headerLogo"><a class="headerLogo__link" href="./index.html">Header Logo</a></div>
+      <nav class="headerNav">
+        <ul class="headerNav__listOfLinks">
+          <li><a class="headerNav__link" href="#">header link one</a></li>
+          <li><a class="headerNav__link" href="#">header link two</a></li>
+          <li><a class="headerNav__link" href="#">header link three</a></li>
+        </ul>
+      </nav>
+    </div>   
+  </header>
 </body>
 </html>
