implement page footer

--- a/index.html
+++ b/index.html
@@ -20,5 +20,8 @@
       </nav>
     </div>   
   </header>
+  <footer class="pageFooter">
+    <p>Copyright © The Odin Project 2021</p>
+  </footer>
 </body>
 </html>
