implement introdution section

--- a/index.html
+++ b/index.html
@@ -20,6 +20,21 @@
       </nav>
     </div>   
   </header>
+  <main>
+    <h1 hidden>Awesome website</h1>
+    <section class="pageIntrodution">
+      <div class="container">
+        <div class="pageIntrodution__weclome">
+          <h2>The Charmer Rakan</h2>
+          <p>As mercurial as he is charming, Rakan is an infamous vastayan troublemaker and the greatest battle-dancer in Lhotlan tribal history. To the humans of the Ionian highlands, his name has long been synonymous with wild festivals, uncontrollable parties, and anarchic music. Few would suspect this energetic, traveling showman is also partner to the rebel Xayah, and is dedicated to her cause.</p>
+          <button class="btn">Sign up</button>
+        </div>  
+        <div class="pageIntrodution__image">
+          <img src="./images/Rakan_0.jpg" width="100%" alt="awesome image">
+        </div>
+      </div>
+    </section>
+  </main>
   <footer class="pageFooter">
     <p>Copyright © The Odin Project 2021</p>
   </footer>
