implement abilities section

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Landing Page</title>
+  <title>Rakan - Champion of League of Legends</title>
   <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
@@ -31,6 +31,46 @@
         </div>  
         <div class="pageIntrodution__image">
           <img src="./images/Rakan_0.jpg" width="100%" alt="awesome image">
+        </div>
+      </div>
+    </section>
+    <section class="abilities">
+      <h3 class="abilities__header">Abilities</h3>
+      <div class="container">
+        <div class="abilities__skill">
+          <div class="abilities__skillImage">
+            <img src="./images/skills/Rakan_P.png" width="64" height="64" alt="FEY FEATHERS">
+          </div>
+          <h4>FEY FEATHERS</h4>
+          <p>Rakan periodically gains a shield.</p>
+        </div>
+        <div class="abilities__skill">
+          <div class="abilities__skillImage">
+            <img src="./images/skills/Rakan_Q.png" width="64" height="64" alt="GLEAMING QUILL">
+          </div>
+          <h4>GLEAMING QUILL</h4>
+          <p>Flings a magical feather that deals magic damage. Striking a champion or epic monster enables Rakan to heal his allies.</p>
+        </div>
+        <div class="abilities__skill">
+          <div class="abilities__skillImage">
+            <img src="./images/skills/Rakan_W.png" width="64" height="64" alt="GRAND ENTRANCE">
+          </div>
+          <h4>GRAND ENTRANCE</h4>
+          <p>Dashes to a location, knocking up nearby enemies on arrival.</p>
+        </div>
+        <div class="abilities__skill">
+          <div class="abilities__skillImage">
+            <img src="./images/skills/Rakan_E.png" width="64" height="64" alt="BATTLE DANCE">
+          </div>
+          <h4>BATTLE DANCE</h4>
+          <p>Flies to an allied champion granting them a shield. Can be re-cast for free for a short duration.</p>
+        </div>
+        <div class="abilities__skill">
+          <div class="abilities__skillImage">
+            <img src="./images/skills/Rakan_R.png" width="64" height="64" alt="THE QUICKNESS">
+          </div>
+          <h4>THE QUICKNESS</h4>
+          <p>Gains Move Speed, charming and dealing magic damage to enemies touched.</p>
         </div>
       </div>
     </section>
