implement quote section

--- a/index.html
+++ b/index.html
@@ -74,6 +74,16 @@
         </div>
       </div>
     </section>
+    <section class="quote">
+      <div class="container">
+        <figure>
+          <blockquote>
+            <p>"I'm gonna' burn this place down, then help them build it back up - so I can burn it again!"</p>
+          </blockquote>
+          <figcaption>- Rakan, League Of Legends</figcaption>
+        </figure>
+      </div>
+    </section>
   </main>
   <footer class="pageFooter">
     <p>Copyright © The Odin Project 2021</p>
