--- a/index.html
+++ b/index.html
@@ -84,6 +84,20 @@
         </figure>
       </div>
     </section>
+    <section class="callToAction">
+      <div class="container">
+        <div class="callToAction__banner">
+          <div class="callToAction__bannerText">
+            <p>YOUR LEGEND STARTS HERE</p>
+            <p>Sign up by clicking that button right over there!</p>
+          </div>
+          <div class="callToAction__bannerButton">
+            <button class="btn">
+              Sign up
+            </button>
+          </div>
+      </div>
+    </section>
   </main>
   <footer class="pageFooter">
     <p>Copyright © The Odin Project 2021</p>
