edit page header

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 <body>
   <header class="pageHeader">
     <div class="container">
-      <div class="headerLogo"><a class="headerLogo__link" href="./index.html">Header Logo</a></div>
+      <div class="headerLogo"><a class="headerLogo__link" href="./index.html">RAKAN</a></div>
       <nav class="headerNav">
         <ul class="headerNav__listOfLinks">
-          <li><a class="headerNav__link" href="#">header link one</a></li>
-          <li><a class="headerNav__link" href="#">header link two</a></li>
-          <li><a class="headerNav__link" href="#">header link three</a></li>
+          <li><a class="headerNav__link" target="_blank" href="https://leagueoflegends.fandom.com/wiki/Rakan">Fandom page</a></li>
+          <li><a class="headerNav__link" target="_blank" href="https://gol.gg/champion/champion-stats/136/season-ALL/split-ALL/tournament-ALL/">Stats</a></li>
+          <li><a class="headerNav__link" target="_blank" href="https://www.youtube.com/watch?v=7wxt3FRKA5U">Video guide</a></li>
         </ul>
       </nav>
     </div>   
